--- a/index.html
+++ b/index.html
@@ -139,11 +139,7 @@
 const firebaseConfig = {
   apiKey: "AIzaSyBPq6Wfxzq02MfK69BFxHm9_FUjDGTmAcw",
   authDomain: "kykychat-24c7f.firebaseapp.com",
-  databaseURL: "https://kykychat-24c7f-default-rtdb.firebaseio.com",
   projectId: "kykychat-24c7f",
-  storageBucket: "kykychat-24c7f.appspot.com",
-  messagingSenderId: "342562811927",
-  appId: "1:342562811927:web:0fed1e1f511c4fddcfec52"
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -160,6 +156,7 @@ const userBalance = document.getElementById('user-balance');
 const orgList = document.getElementById('org-list');
 const chime = document.getElementById('chime');
 const notif = document.getElementById('notification');
+const onlineUsers = document.getElementById('online-users');
 
 const modal = document.getElementById('virement-modal');
 const montantInput = document.getElementById('virement-montant');
@@ -184,7 +181,7 @@ function toggleModal(show = true) {
 }
 
 async function updateBalanceUI() {
-  const userRef = db.collection('users').doc(currentUser.uid);
+  const userRef = db.collection('users').doc(currentUser.displayName);
   const doc = await userRef.get();
   const balance = doc.exists ? doc.data().balance || 0 : 0;
   userBalance.textContent = balance.toFixed(2) + 'µ';
@@ -197,44 +194,121 @@ function showNotification(msg) {
   setTimeout(() => notif.style.display = 'none', 5000);
 }
 
-async function listenForVirements() {
-  // Notification quand je reçois un virement perso
+async function listenToIncomingTransfers() {
   db.collection('virements')
-    .where('to', '==', currentUser.displayName)
-    .where('seen', '==', false)
+    .where("to", "==", currentUser.displayName)
+    .where("seen", "==", false)
     .onSnapshot(snapshot => {
-      snapshot.docChanges().forEach(async change => {
-        if (change.type === 'added') {
-          const data = change.doc.data();
-          showNotification(`${data.from} vous a fait un virement de ${data.amount.toFixed(2)}µ !`);
-          await db.collection('virements').doc(change.doc.id).update({ seen: true });
-          updateBalanceUI();
-        }
+      snapshot.forEach(async doc => {
+        const data = doc.data();
+        showNotification(`${data.from} vous a envoyé ${data.amount.toFixed(2)}µ`);
+        await db.collection('virements').doc(doc.id).update({ seen: true });
       });
     });
+}
 
-  // Notification quand quelqu’un fait un virement à une organisation à laquelle j’appartiens
-  db.collection('notifications')
-    .where('for', '==', currentUser.displayName)
-    .where('seen', '==', false)
-    .onSnapshot(snapshot => {
-      snapshot.docChanges().forEach(async change => {
-        if (change.type === 'added') {
-          const data = change.doc.data();
-          showNotification(`${data.from} a envoyé ${data.amount.toFixed(2)}µ à ${data.org}`);
-          await db.collection('notifications').doc(change.doc.id).update({ seen: true });
-          updateBalanceUI();
-        }
+function listenToOrganisationTransfers() {
+  db.collection("organisations")
+    .where("members", "array-contains", currentUser.displayName)
+    .onSnapshot((snapshot) => {
+      const orgIds = [];
+      snapshot.forEach((doc) => {
+        orgIds.push({ id: doc.id, name: doc.data().name });
       });
+
+      if (orgIds.length === 0) return;
+
+      db.collection("org_transfers")
+        .where("orgId", "in", orgIds.map(o => o.id))
+        .where("seenBy", "not-in", [currentUser.displayName])
+        .onSnapshot((snap) => {
+          snap.forEach(async (doc) => {
+            const data = doc.data();
+            const orgName = orgIds.find(o => o.id === data.orgId)?.name || "une organisation";
+            showNotification(`${data.from} a fait un virement de ${data.amount.toFixed(2)}µ à l'organisation ${orgName}`);
+
+            await db.collection("org_transfers").doc(doc.id).update({
+              seenBy: firebase.firestore.FieldValue.arrayUnion(currentUser.displayName)
+            });
+          });
+        });
     });
+}
+
+async function loadOrganisations() {
+  orgList.innerHTML = "<h3>Organisations</h3>";
+  const snap = await db.collection('organisations')
+    .where('members', 'array-contains', currentUser.displayName).get();
+
+  snap.forEach(doc => {
+    const data = doc.data();
+    const div = document.createElement("div");
+    div.innerHTML = `
+      <div class="org-header">
+        <div>
+          <strong>${data.name}</strong><br>Créé par: ${data.creator}<br>Balance: ${data.balance.toFixed(2)}µ
+        </div>
+        <button onclick="recuperer('${doc.id}', ${data.balance})">Récupérer</button>
+      </div>
+    `;
+    orgList.appendChild(div);
+  });
+}
+
+window.recuperer = async (orgId, orgBalance) => {
+  const montant = parseFloat(prompt("Combien voulez-vous récupérer ?").replace(",", "."));
+  if (isNaN(montant) || montant <= 0 || montant > orgBalance) return alert("Montant invalide !");
+  await db.collection('organisations').doc(orgId).update({
+    balance: firebase.firestore.FieldValue.increment(-montant)
+  });
+  await db.collection('users').doc(currentUser.displayName).update({
+    balance: firebase.firestore.FieldValue.increment(montant)
+  });
+  updateBalanceUI();
+  loadOrganisations();
+};
+
+async function loadOnlineUsers() {
+  onlineUsers.innerHTML = "<h3>En ligne</h3>";
+  const snap = await db.collection('users').where('online', '==', true).get();
+  snap.forEach(doc => {
+    const div = document.createElement("div");
+    div.textContent = doc.id;
+    onlineUsers.appendChild(div);
+  });
+}
+
+async function setOnlineStatus(status) {
+  if (currentUser) {
+    const userRef = db.collection('users').doc(currentUser.displayName);
+    const doc = await userRef.get();
+    const existingBalance = doc.exists && doc.data().balance !== undefined ? doc.data().balance : 50;
+    await userRef.set({
+      online: status,
+      balance: existingBalance
+    }, { merge: true });
+  }
+}
+
+async function initApp() {
+  document.getElementById('auth-popup').style.display = 'none';
+  document.getElementById('main').style.display = 'flex';
+  await setOnlineStatus(true);
+  updateBalanceUI();
+  loadOrganisations();
+  loadOnlineUsers();
+  listenToIncomingTransfers();
+  listenToOrganisationTransfers(); // ← ICI
+  setInterval(loadOnlineUsers, 10000);
 }
 
 loginBtn.onclick = async () => {
   try {
     const email = usernameInput.value + "@mail.com";
     const pass = passwordInput.value;
-    const userCred = await auth.signInWithEmailAndPassword(email, pass);
-    currentUser = userCred.user;
+    await auth.signInWithEmailAndPassword(email, pass);
+    currentUser = { displayName: usernameInput.value };
+    await setOnlineStatus(true);
     initApp();
   } catch {
     alert("Erreur de connexion !");
@@ -245,23 +319,17 @@ signupBtn.onclick = async () => {
   try {
     const email = usernameInput.value + "@mail.com";
     const pass = passwordInput.value;
-    const userCred = await auth.createUserWithEmailAndPassword(email, pass);
-    await userCred.user.updateProfile({ displayName: usernameInput.value });
-    await db.collection('users').doc(userCred.user.uid).set({ balance: 50 });
-    currentUser = userCred.user;
+    await auth.createUserWithEmailAndPassword(email, pass);
+    currentUser = { displayName: usernameInput.value };
+    await db.collection('users').doc(usernameInput.value).set({
+      balance: 50,
+      online: true
+    });
     initApp();
   } catch {
     alert("Erreur d'inscription !");
   }
 };
-
-function initApp() {
-  document.getElementById('auth-popup').style.display = 'none';
-  document.getElementById('main').style.display = 'block';
-  updateBalanceUI();
-  loadOrganisations();
-  listenForVirements();
-}
 
 document.getElementById('new-org').onclick = async () => {
   const name = prompt("Nom de l'organisation");
@@ -270,31 +338,12 @@ document.getElementById('new-org').onclick = async () => {
     name,
     creator: currentUser.displayName,
     balance: 0,
-    members: [currentUser.displayName]
+    members: [currentUser.displayName],
+    lastAmount: 0,
+    lastFrom: ""
   });
   loadOrganisations();
 };
-
-async function loadOrganisations() {
-  orgList.innerHTML = "";
-  const snap = await db.collection('organisations')
-    .where('members', 'array-contains', currentUser.displayName).get();
-
-  snap.forEach(doc => {
-    const data = doc.data();
-    const div = document.createElement("div");
-    div.innerHTML = `<strong>${data.name}</strong><br>Créé par: ${data.creator}<br>Balance: ${data.balance.toFixed(2)}µ`;
-    div.onclick = () => {
-      const newUser = prompt("Ajouter un utilisateur à cette organisation:");
-      if (newUser) {
-        db.collection('organisations').doc(doc.id).update({
-          members: firebase.firestore.FieldValue.arrayUnion(newUser)
-        });
-      }
-    };
-    orgList.appendChild(div);
-  });
-}
 
 document.getElementById('virement').onclick = () => toggleModal(true);
 
@@ -302,18 +351,18 @@ document.getElementById('confirm-virement').onclick = async () => {
   const montant = parseFloat(montantInput.value.replace(",", "."));
   const destinataire = destinataireInput.value.trim();
   const orgId = organisationSelect.value;
-
   if (isNaN(montant) || montant <= 0) return;
 
-  const userRef = db.collection('users').doc(currentUser.uid);
+  const userRef = db.collection('users').doc(currentUser.displayName);
   const userSnap = await userRef.get();
   const solde = userSnap.data().balance || 0;
   if (solde < montant) return alert("Pas assez d'argent !");
 
   if (destinataire) {
-    const users = await db.collection('users').where('displayName', '==', destinataire).get();
-    if (!users.empty) {
-      await db.collection('users').doc(users.docs[0].id).update({
+    const destRef = db.collection('users').doc(destinataire);
+    const destSnap = await destRef.get();
+    if (destSnap.exists) {
+      await destRef.update({
         balance: firebase.firestore.FieldValue.increment(montant)
       });
       await db.collection('virements').add({
@@ -325,27 +374,18 @@ document.getElementById('confirm-virement').onclick = async () => {
     }
   } else if (orgId) {
     const orgRef = db.collection('organisations').doc(orgId);
-    const orgSnap = await orgRef.get();
-    const orgData = orgSnap.data();
-
-    // Ajoute l'argent à l’organisation
     await orgRef.update({
-      balance: firebase.firestore.FieldValue.increment(montant)
+      balance: firebase.firestore.FieldValue.increment(montant),
+      lastAmount: montant,
+      lastFrom: currentUser.displayName
     });
-
-    // Crée une notification pour chaque membre
-    for (const member of orgData.members) {
-      if (member !== currentUser.displayName) {
-        await db.collection('notifications').add({
-          for: member,
-          from: currentUser.displayName,
-          org: orgData.name,
-          amount: montant,
-          seen: false,
-          timestamp: Date.now()
-        });
-      }
-    }
+    await db.collection('org_transfers').add({
+      orgId: orgId,
+      amount: montant,
+      from: currentUser.displayName,
+      timestamp: firebase.firestore.FieldValue.serverTimestamp(),
+      seenBy: [] // liste de membres ayant vu la notif
+    });
   }
 
   await userRef.update({
@@ -354,7 +394,11 @@ document.getElementById('confirm-virement').onclick = async () => {
 
   toggleModal(false);
   updateBalanceUI();
+  loadOrganisations();
 };
+
+window.addEventListener("beforeunload", () => setOnlineStatus(false));
+
 
 
 </script>
