--- a/index.html
+++ b/index.html
@@ -5,126 +5,170 @@
   <title>Organisations & Virements</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <style>
-    body {
-      font-family: 'Press Start 2P', cursive;
-      background: linear-gradient(to bottom, #1a1a1a, #111);
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-    }
-    input, button, select {
-      font-family: 'Press Start 2P', cursive;
-      padding: 10px;
-      margin: 5px;
-      border: none;
-      outline: none;
-      border-radius: 5px;
-    }
-    input, select {
-      width: 80%;
-      font-size: 10px;
-    }
-    button {
-      background: #00ffaa;
-      color: #000;
-      cursor: pointer;
-      font-size: 10px;
-    }
-    .popup, .modal {
-      background: #222;
-      border: 2px solid #00ffaa;
-      padding: 20px;
-      width: 320px;
-      margin: 20px auto;
-      box-shadow: 0 0 10px #00ffaa;
-    }
-    .modal-overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-    .modal-overlay.active {
-      display: flex;
-    }
-    .notification {
-      position: fixed;
-      bottom: 10px;
-      left: 10px;
-      background: #555;
-      padding: 10px;
-      border-radius: 5px;
-      display: none;
-      font-size: 10px;
-    }
-    #main {
-      max-width: 900px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-    }
-    #org-list, #online-users {
-      width: 30%;
-    }
-    #center-panel {
-      width: 35%;
-    }
-    #org-list > div, #online-users > div {
-      margin-top: 15px;
-      padding: 10px;
-      background: #333;
-      border: 2px solid #00ffaa;
-      text-align: left;
-    }
-    h1, h2, h3 {
-      color: #00ffaa;
-    }
-    .org-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-.organisation-box {
-  border: 2px solid black;
-  border-radius: 10px;
-  padding: 15px;
-  margin-bottom: 20px;
-  background-color: #e4e4e4;
+body {
   font-family: 'Press Start 2P', cursive;
-  font-size: 10px;
+  background: linear-gradient(to bottom, #0d0d3f, #00001a);
+  color: #fff;
+  padding: 30px;
+  text-align: center;
 }
 
+input, button, select {
+  font-family: 'Press Start 2P', cursive;
+  padding: 15px;
+  margin: 8px;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+}
+
+input, select {
+  width: 80%;
+  font-size: 12px;
+}
+
+button {
+  background: #0099ff;
+  color: #fff;
+  cursor: pointer;
+  font-size: 12px;
+  box-shadow: 0 4px 0 #0066aa;
+  transition: all 0.2s;
+}
+
+button:hover {
+  background: #0077cc;
+  box-shadow: 0 2px 0 #004c80;
+}
+
+.popup, .modal {
+  background: #001d3d;
+  border: 2px solid #0099ff;
+  padding: 20px;
+  width: 340px;
+  margin: 20px auto;
+  box-shadow: 0 0 15px #0099ff;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 50, 0.85);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-overlay.active {
+  display: flex;
+}
+
+.notification {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  background: #0077cc;
+  padding: 10px;
+  border-radius: 5px;
+  display: none;
+  font-size: 11px;
+  box-shadow: 0 0 8px #0099ff;
+  color: white;
+}
+
+#main {
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+#org-list, #online-users {
+  width: 30%;
+}
+
+#center-panel {
+  width: 35%;
+}
+
+#org-list > div, #online-users > div {
+  margin-top: 15px;
+  padding: 10px;
+  background: #001d3d;
+  border: 2px solid #0099ff;
+  text-align: left;
+  color: white;
+}
+
+h1, h2, h3 {
+  color: #00ccff;
+  text-shadow: 1px 1px 2px #000;
+}
+
+/* Boîte organisation */
+.organisation-box {
+  border: 2px solid #0099ff;
+  border-radius: 12px;
+  padding: 20px;
+  margin-bottom: 25px;
+  background-color: #ffffff;
+  color: #000033;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 12px;
+  text-align: center;
+  box-shadow: 0 0 10px #0099ff;
+}
+
+/* Contenu organisation */
 .org-content {
-  margin-bottom: 15px;
-  line-height: 1.6;
+  margin-bottom: 20px;
+  line-height: 2;
+  font-size: 14px;
 }
 
+/* Balance mise en avant */
+.org-content strong:first-child {
+  display: block;
+  font-size: 18px;
+  color: #0066cc;
+  margin-bottom: 10px;
+}
+
+.org-content::after {
+  content: "💰";
+  display: block;
+  font-size: 22px;
+  margin-top: 10px;
+}
+
+/* Boutons */
 .org-buttons {
   display: flex;
-  gap: 10px;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
 }
 
 .org-buttons button {
-  padding: 6px 12px;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 9px;
+  padding: 12px 20px;
+  font-size: 12px;
   border: none;
-  border-radius: 5px;
-  background-color: #000;
-  color: #fff;
+  border-radius: 8px;
+  background-color: #0099ff;
+  color: white;
   cursor: pointer;
-  transition: 0.2s;
+  box-shadow: 0 4px 0 #0066aa;
+  transition: all 0.2s;
+  width: 80%;
 }
 
 .org-buttons button:hover {
-  background-color: #444;
+  background-color: #0077cc;
+  box-shadow: 0 2px 0 #004c80;
 }
+
 
   </style>
 </head>
