--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@ h1, h2, h3 {
     </div>
   </div>
 
-  <div id="notification" class="notification"></div>
-  <audio id="chime" src="chime.mp3"></audio>
+<div id="notif" style="display:none; position:fixed; top:10px; right:10px; background:#222; color:white; padding:10px; border-radius:5px; z-index:1000;"></div>
+<audio id="chime" src="chime.mp3" preload="auto"></audio>
+
 
   <div class="modal-overlay" id="virement-modal">
     <div class="modal">
