--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ h1, h2, h3 {
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore-compat.js"></script>
 
-  <script>
+<script>
 const firebaseConfig = {
   apiKey: "AIzaSyBPq6Wfxzq02MfK69BFxHm9_FUjDGTmAcw",
   authDomain: "kykychat-24c7f.firebaseapp.com",
@@ -251,7 +251,7 @@ function toggleModal(show = true) {
   if (show) {
     montantInput.value = "";
     destinataireInput.value = "";
-    organisationSelect.innerHTML = `<option value="">Aucune organisation</option>`;
+    organisationSelect.innerHTML = <option value="">Aucune organisation</option>;
     db.collection('organisations').get().then(snapshot => {
       snapshot.forEach(doc => {
         const opt = document.createElement("option");
@@ -277,7 +277,6 @@ function showNotification(msg) {
   setTimeout(() => notif.style.display = 'none', 5000);
 }
 
-
 async function listenToIncomingTransfers() {
   db.collection('virements')
     .where("to", "==", currentUser.displayName)
@@ -285,52 +284,39 @@ async function listenToIncomingTransfers() {
     .onSnapshot(snapshot => {
       snapshot.forEach(async doc => {
         const data = doc.data();
-        showNotification(`${data.from} vous a envoyé ${data.amount.toFixed(2)}µ`);
+        showNotification(${data.from} vous a envoyé ${data.amount.toFixed(2)}µ);
         await db.collection('virements').doc(doc.id).update({ seen: true });
       });
     });
 }
 
 function listenToOrganisationTransfers() {
-  const userPseudo = currentUser.displayName;
-
   db.collection("organisations")
-    .where("members", "array-contains", userPseudo)
+    .where("members", "array-contains", currentUser.displayName)
     .onSnapshot((snapshot) => {
-      const orgMap = {};
+      const orgIds = [];
       snapshot.forEach((doc) => {
-        orgMap[doc.id] = doc.data().name;
+        orgIds.push({ id: doc.id, name: doc.data().name });
       });
 
-      if (Object.keys(orgMap).length === 0) return;
+      if (orgIds.length === 0) return;
 
-      // Attention : on ne peut pas faire un .where("seenBy", "not-in", [...]) si liste vide → on vérifie manuellement
       db.collection("org_transfers")
-        .where("orgId", "in", Object.keys(orgMap))
-        .orderBy("timestamp", "desc")
-        .limit(10)
+        .where("orgId", "in", orgIds.map(o => o.id))
+        .where("seenBy", "not-in", [currentUser.displayName])
         .onSnapshot((snap) => {
-          snap.docChanges().forEach(async (change) => {
-            if (change.type === "added") {
-              const doc = change.doc;
-              const data = doc.data();
-              const seenBy = data.seenBy || [];
+          snap.forEach(async (doc) => {
+            const data = doc.data();
+            const orgName = orgIds.find(o => o.id === data.orgId)?.name || "une organisation";
+            showNotification(${data.from} a fait un virement de ${data.amount.toFixed(2)}µ à l'organisation ${orgName});
 
-              if (!seenBy.includes(userPseudo)) {
-                const orgName = orgMap[data.orgId] || "une organisation";
-                showNotification(`${data.from} a fait un virement de ${data.amount.toFixed(2)}µ à l'organisation ${orgName}`);
-
-                await db.collection("org_transfers").doc(doc.id).update({
-                  seenBy: firebase.firestore.FieldValue.arrayUnion(userPseudo)
-                });
-              }
-            }
+            await db.collection("org_transfers").doc(doc.id).update({
+              seenBy: firebase.firestore.FieldValue.arrayUnion(currentUser.displayName)
+            });
           });
         });
     });
 }
-
-
 
 async function loadOrganisations() {
   orgList.innerHTML = "<h3>Organisations</h3>";
@@ -342,7 +328,7 @@ async function loadOrganisations() {
     const div = document.createElement("div");
     div.classList.add("organisation-box");
 
-    const html = `
+    const html = 
       <div class="org-content">
         <strong>${data.name}</strong><br>
         Créé par: ${data.creator}<br>
@@ -352,7 +338,7 @@ async function loadOrganisations() {
         <button class="recuperer-btn" data-orgid="${doc.id}" data-balance="${data.balance}">Récupérer</button>
         <button class="ajouter-btn" data-orgid="${doc.id}">Ajouter membre</button>
       </div>
-    `;
+    ;
 
     div.innerHTML = html;
     orgList.appendChild(div);
@@ -398,7 +384,7 @@ async function loadOrganisations() {
         members: firebase.firestore.FieldValue.arrayUnion(pseudo)
       });
 
-      alert(`${pseudo} ajouté à l'organisation !`);
+      alert(${pseudo} ajouté à l'organisation !);
       loadOrganisations();
     });
   });
@@ -535,9 +521,6 @@ document.getElementById('confirm-virement').onclick = async () => {
 };
 
 window.addEventListener("beforeunload", () => setOnlineStatus(false));
-
-
-
 </script>
 
 </body>
