--- a/index.html
+++ b/index.html
@@ -196,9 +196,8 @@ h1, h2, h3 {
     </div>
   </div>
 
-<div id="notif" style="display:none; position:fixed; top:10px; right:10px; background:#222; color:white; padding:10px; border-radius:5px; z-index:1000;"></div>
-<audio id="chime" src="chime.mp3" preload="auto"></audio>
-
+  <div id="notification" class="notification"></div>
+  <audio id="chime" src="chime.mp3"></audio>
 
   <div class="modal-overlay" id="virement-modal">
     <div class="modal">
@@ -218,7 +217,7 @@ h1, h2, h3 {
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore-compat.js"></script>
 
-<script>
+  <script>
 const firebaseConfig = {
   apiKey: "AIzaSyBPq6Wfxzq02MfK69BFxHm9_FUjDGTmAcw",
   authDomain: "kykychat-24c7f.firebaseapp.com",
@@ -251,7 +250,7 @@ function toggleModal(show = true) {
   if (show) {
     montantInput.value = "";
     destinataireInput.value = "";
-    organisationSelect.innerHTML = <option value="">Aucune organisation</option>;
+    organisationSelect.innerHTML = `<option value="">Aucune organisation</option>`;
     db.collection('organisations').get().then(snapshot => {
       snapshot.forEach(doc => {
         const opt = document.createElement("option");
@@ -277,6 +276,7 @@ function showNotification(msg) {
   setTimeout(() => notif.style.display = 'none', 5000);
 }
 
+
 async function listenToIncomingTransfers() {
   db.collection('virements')
     .where("to", "==", currentUser.displayName)
@@ -284,39 +284,52 @@ async function listenToIncomingTransfers() {
     .onSnapshot(snapshot => {
       snapshot.forEach(async doc => {
         const data = doc.data();
-        showNotification(${data.from} vous a envoyé ${data.amount.toFixed(2)}µ);
+        showNotification(`${data.from} vous a envoyé ${data.amount.toFixed(2)}µ`);
         await db.collection('virements').doc(doc.id).update({ seen: true });
       });
     });
 }
 
 function listenToOrganisationTransfers() {
+  const userPseudo = currentUser.displayName;
+
   db.collection("organisations")
-    .where("members", "array-contains", currentUser.displayName)
+    .where("members", "array-contains", userPseudo)
     .onSnapshot((snapshot) => {
-      const orgIds = [];
+      const orgMap = {};
       snapshot.forEach((doc) => {
-        orgIds.push({ id: doc.id, name: doc.data().name });
+        orgMap[doc.id] = doc.data().name;
       });
 
-      if (orgIds.length === 0) return;
+      if (Object.keys(orgMap).length === 0) return;
 
+      // Attention : on ne peut pas faire un .where("seenBy", "not-in", [...]) si liste vide → on vérifie manuellement
       db.collection("org_transfers")
-        .where("orgId", "in", orgIds.map(o => o.id))
-        .where("seenBy", "not-in", [currentUser.displayName])
+        .where("orgId", "in", Object.keys(orgMap))
+        .orderBy("timestamp", "desc")
+        .limit(10)
         .onSnapshot((snap) => {
-          snap.forEach(async (doc) => {
-            const data = doc.data();
-            const orgName = orgIds.find(o => o.id === data.orgId)?.name || "une organisation";
-            showNotification(${data.from} a fait un virement de ${data.amount.toFixed(2)}µ à l'organisation ${orgName});
+          snap.docChanges().forEach(async (change) => {
+            if (change.type === "added") {
+              const doc = change.doc;
+              const data = doc.data();
+              const seenBy = data.seenBy || [];
 
-            await db.collection("org_transfers").doc(doc.id).update({
-              seenBy: firebase.firestore.FieldValue.arrayUnion(currentUser.displayName)
-            });
+              if (!seenBy.includes(userPseudo)) {
+                const orgName = orgMap[data.orgId] || "une organisation";
+                showNotification(`${data.from} a fait un virement de ${data.amount.toFixed(2)}µ à l'organisation ${orgName}`);
+
+                await db.collection("org_transfers").doc(doc.id).update({
+                  seenBy: firebase.firestore.FieldValue.arrayUnion(userPseudo)
+                });
+              }
+            }
           });
         });
     });
 }
+
+
 
 async function loadOrganisations() {
   orgList.innerHTML = "<h3>Organisations</h3>";
@@ -328,7 +341,7 @@ async function loadOrganisations() {
     const div = document.createElement("div");
     div.classList.add("organisation-box");
 
-    const html = 
+    const html = `
       <div class="org-content">
         <strong>${data.name}</strong><br>
         Créé par: ${data.creator}<br>
@@ -338,7 +351,7 @@ async function loadOrganisations() {
         <button class="recuperer-btn" data-orgid="${doc.id}" data-balance="${data.balance}">Récupérer</button>
         <button class="ajouter-btn" data-orgid="${doc.id}">Ajouter membre</button>
       </div>
-    ;
+    `;
 
     div.innerHTML = html;
     orgList.appendChild(div);
@@ -384,7 +397,7 @@ async function loadOrganisations() {
         members: firebase.firestore.FieldValue.arrayUnion(pseudo)
       });
 
-      alert(${pseudo} ajouté à l'organisation !);
+      alert(`${pseudo} ajouté à l'organisation !`);
       loadOrganisations();
     });
   });
@@ -521,8 +534,10 @@ document.getElementById('confirm-virement').onclick = async () => {
 };
 
 window.addEventListener("beforeunload", () => setOnlineStatus(false));
+
+
+
 </script>
 
 </body>
 </html>
-
